source/css/partials/_content.sass
main

  #blurred_screenshot
    padding: 0 5%
    height: 600px
    background: url("../images/blurred-screenshot.jpg")
    background-repeat: no-repeat
    background-size: 100%
    width: 100%
    margin-bottom: 20%
    margin-top: 80px

    +media($tablet)
      background: none

  #screen_image
    position: relative
    background: url("../images/dark-screen.gif")
    background-repeat: no-repeat
    background-size: 100%
    height: 100%
    +outer-container

    +media($desktop)
      +outer-container
      height: 800px

  #imprint
    margin-top: 180px

  h1
    font-family: $header-font, $verdana
    color: white
    font-weight: normal
    text-transform: uppercase
    word-spacing: 2px
    text-align: center
    padding: 60px 0 20px 0
    font-size: 2.9em

    +media($tablet)
      color: $blue

  h2
    color: white
    font-family: $header-font, $verdana
    font-weight: normal
    text-align: center
    word-spacing: 2px
  h6
    font-family: $header-font, $verdana
    text-align: center
    font-weight: normal

  section
    +outer-container
    font-size: 1.3em
    max-width: 40em
    h1
      color: $blue
      font-size: 2em
    h2
      color: $blue
      text-transform: uppercase
      padding: 50px 0 30px 0

    a.button
      +span-columns(6)
      +shift(3)
      text-decoration: none
      margin-top: 80px
      margin-bottom: 40px

    #imprint
      h5
        margin-top: 40px
        margin-bottom: 15px
      h3
        margin-top: 40px
        margin-bottom: 30px
      h6
        text-align: left
        margin-bottom: 10px

    article
      padding: 50px 5px 0 5px
      img
        width: 100%

      +media($desktop)
        +span-columns(6)

      +media($tablet)
        +span-columns(12)

    .feature
      padding: 0 5px 20px 5px
      text-align: center
      +span-columns(12)

      h1
        font-size: 1em
        text-transform: none
        background-color: $brightgrey
        padding: 6px
        border-radius: 8px
        margin: 30px 0 10px 0
      i
        padding-top: 40px
        font-size: 58px
        color: $blue
        margin: 0

      +media($desktop)
        +span-columns(4)
        +omega(3n)

    .future-features
      padding: 0 5px 20px 5px
      +span-columns(12)
      text-align: center
      h1
        font-size: 1em
        text-transform: none
        text-align: center
        color: $darkgrey
        background-color: $brightgrey
        padding: 6px
        border-radius: 8px
        margin: 30px 0 10px 0

      +media($desktop)
        +span-columns(4)
        +omega(4n)
        text-align: left

    .future-features-speachbubble
      padding: 0 5px 20px 5px
      +span-columns(12)

      +media($desktop)
        +span-columns(8)
        +omega()

    .prices
      background-color: $brightgrey
      padding: 0 10px
      text-align: center
      border-radius: 8px
      margin-bottom: 90px
      +span-columns(12)

      i
        font-size: 68px
        color: $blue
      img
        width: 90px
      h1
        font-size: 1em
        padding: 6px
        border-radius: 8px
        background-color: white
        margin: 20px 0
      p.price
        padding-bottom: 10px
        font-weight: bold

      +media($desktop)
        margin: 30px 10px
        +span-columns(4)
        +omega()

  section.first
    margin-top: 100px
    h2
      font-size: 30px
      text-transform: none

  #beta-info
    position: relative
    bottom: 6em
    font-size: 1.5em
    left: -2.5%
    width: 105%
    background: white
    z-index: 998
    color: #117bbe
    text-align: center
    // border-bottom: 3px solid darken($blue, 25%)
    opacity: 0.65
    @include transform(rotate(-5deg))
    height: 50px

  p.centered
    text-align: center
  p.small-hint
    font-size: 15px
  a.button-small
    margin-top: 10px !important
    margin-bottom: 30px !important

